# ellipsis3d

./: AUTHORS  Advection_diffusion.c  Allocation_of_memory.c  Boundary_conditions_enforcement.c  Boundary_conditions_parsing.c  Boundary_conditions_shapes.c  Boundary_conditions_skew.c  Boundary_conditions_temperature.c  Boundary_conditions_velocity.c  ChangeLog  Chem_transport.c  Element_calculations.c  Ellipsis3D.c  Fourier_transforms.c  Full_multigrid_non_linear.c  Gauss_seidel.c  Geometry_axi.c  Geometry_cartesian.c  Global_assembly_operations_nodes.c  Global_assembly_operations_particles.c  Initial_conditions.c  Instructions.c  MG_matrix_solver.c  MG_solver_mesh_operations.c  Makefile.am  Makefile.in  Material_properties_matrices.c  Matrix_operations_dot_prod.c  Matrix_operations_multipy.c  NEWS  Nodal_mesh.c  Output.c  PPM_output.c  Pan_problem_misc_functions.c  Process_buoyancy.c  Process_velocity.c  Profiling.c  README  Topo_gravity.c  Tracer_initialization.c  (+11 more)
Docs/: README  plotting_opendx.html
Docs/plotting_opendx_files/: import_fatplume2.jpe
Examples/: README
Examples/Ellipsis3D_2004_examples/: chemical_plume.input  oblique_subduction.input  plate_flex.input  two_layered_crustal_extension.input
Examples/opendx/: README
Examples/opendx/chemicalplume/: default_velglyph.net  particles_isosurface_glyph.net
Examples/opendx/extn/: isosurface_glyph.net
Examples/opendx/plate_flex/: default_velglyph.net  isosurface_glyph.net  particles_isosurface_glyph.net
Examples/opendx/scripts/: Binary_read.pl  get_node_files_dx_format.mk  get_particles_dx_format.mk  getmaterialpoints.pl  materialOnePoints.general  nodes.general  processing_data.pl
Examples/opendx/subduction/: isosurface_glyph.net
Shell_scripts/: Build.log.previous  HOST-specifics-apollo  OS-specifics-AIX-2  OS-specifics-HP-UX-A.09.05  OS-specifics-IRIX64-6.1  OS-specifics-IRIX64-6.2  OS-specifics-IRIX64-6.4  OS-specifics-IRIX64-6.5  OS-specifics-Linux-2.2.9  OS-specifics-Linux-2.4.20-20.9-prof  OS-specifics-OSF1-V3.2  OS-specifics-OSF1-V4.0  OS-specifics-SunOS-4.1.3_U1  OS-specifics-SunOS-5.3  OS-specifics-SunOS-5.5  OS-specifics-SunOS-5.5.1  OS-specifics-SunOS-5.8  OS-specifics-UNIX_System_V-4.1_ES  build-code
Source_code/: .Advection_diffusion.c.swp  .Material_properties_matrices.c.swp  .Output.c.swo  .Output.c.swp  .Tracer_mesh_interactions.c.swp  .Viscosity_structures.c.swp  .cvsignore  Advection_diffusion.c  Allocation_of_memory.c  Averages_and_integrals.c  Boundary_conditions_parsing.c  Build.log.previous  Construct_coefficient_matrices.c  Construct_mesh_arrays.c  Element_calculations.c  Fourier_transforms.c  Geometry_spherical.c  Global_assembly_operations_nodes.c  Global_assembly_operations_particles.c  Grain_growth.c  Initial_conditions.c  Instructions.c  Jacobians.c  MG_matrix_solver.c  MG_solver_setup.c  Makefile.am  Material_properties_matrices.c  Nodal_mesh.c  Output.c  PPM_output.c  Pan_problem_misc_functions.c  Parsing.c  Profiling.c  Shape_functions.c  Size_does_matter.c  Time_dependence.c  Tracer_advection.c  Tracer_build_matrices.c  Tracer_initialization.c  Tracer_integration.c  (+18 more)
autom4te.cache/: output.0  requests  traces.0  traces.1
docker/: Dockerfile  readme.md
