## Process this file with automake to produce Makefile.in
##
## Copyright (C) 1995 The GeoFramework Consortium
##
## This file is part of Ellipsis3D.
##
## Ellipsis3D is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License, version 2,
## as published by the Free Software Foundation.
##
## Ellipsis3D is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## Author:
##   Louis Moresi <louis.moresi@sci.monash.edu>
##

# $Id: Makefile.am 2397 2005-10-04 22:37:25Z leif $

bin_PROGRAMS = Ellipsis3D

Ellipsis3D_SOURCES = \
	Advection_diffusion.c \
	advection_global_variables.h \
	Allocation_of_memory.c \
	Averages_and_integrals.c \
	Boundary_conditions_enforcement.c \
	Boundary_conditions_parsing.c \
	Boundary_conditions_shapes.c \
	Boundary_conditions_skew.c \
	Boundary_conditions_temperature.c \
	Boundary_conditions_velocity.c \
	chemtrans_global_definitions.h \
	Chem_transport.c \
	Construct_coefficient_matrices.c \
	Construct_mesh_arrays.c \
	convection_global_variables.h \
	Element_calculations.c \
	element_definitions.h \
	Ellipsis3D.c \
	Fourier_transforms.c \
	Full_multigrid_non_linear.c \
	function_prototypes.h \
	Gauss_seidel.c \
	Geometry_axi.c \
	Geometry_cartesian.c \
	Geometry_spherical.c \
	Global_assembly_operations_nodes.c \
	Global_assembly_operations_particles.c \
	global_defs.h \
	Grain_growth.c \
	Initial_conditions.c \
	Instructions.c \
	Jacobians.c \
	Material_properties_matrices.c \
	Matrix_operations_dot_prod.c \
	Matrix_operations_multipy.c \
	MG_matrix_solver.c \
	MG_solver_mesh_operations.c \
	MG_solver_setup.c \
	Nodal_mesh.c \
	Output.c \
	Pan_problem_misc_functions.c \
	Parsing.c \
	PPM_output.c \
	Process_buoyancy.c \
	Process_velocity.c \
	Profiling.c \
	Shape_functions.c \
	Size_does_matter.c \
	temperature_descriptions.h \
	Time_dependence.c \
	Topo_gravity.c \
	Tracer_advection.c \
	Tracer_build_matrices.c \
	tracer_global_definitions.h \
	tracer_global_variables.h \
	Tracer_initialization.c \
	Tracer_integration.c \
	Tracer_mesh_interactions.c \
	Tracer_phase_changes.c \
	Tracer_read.c \
	Tracer_tracer_interactions.c \
	Uzawa_constraint_iteration.c \
	viscosity_descriptions.h \
	Viscosity_structures.c \
	Zeros_of_J0_and_J1.h

## end of Makefile.am
